--- a/internship/health/application.properties
+++ b/internship/health/application.properties
@@ -1,3 +1,4 @@
 #on uzme sve iz defaultnog profila i doda ovo iz ovog profila tj overriduje ako treba nesto i doda novo
 
 management.endpoints.web.exposure.include=health
+logging.level=DEBUG
